JumpScript/tests/baselines/reference/asyncFunctionDeclaration13_es5.errors.txt
tests/cases/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration13_es5.jump(3,11): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration13_es5.jump (1 errors) ====
    async function foo(): Promise<void> {
       // Legal to use 'await' in a type context.
       var v: await;
              ~~~~~
!!! error TS2304: Cannot find name 'await'.
    }
    